basic readme site in place

--- a/.build-files/index.html
+++ b/.build-files/index.html
@@ -2,7 +2,13 @@
 
 [!- block main -!]
 
-<p>Hello, world</p>
+<p><a href="https://github.com/alanwsmith/neovim-menu">source code</a></p>
+
+<h2>README</h2>
+
+<pre>
+[! include "README.neo" !]
+</pre>
 
 [!- endblock -!]
 
