--- a/.build-files/_wrappers/wrapper.html
+++ b/.build-files/_wrappers/wrapper.html
@@ -1,9 +1,9 @@
-[!- set page_title = "This Website Needs A Name" -!]
+[!- set page_title = "neovim-menu" -!]
 
-[!- set domain_no_trailing_slash = "www.alanwsmith.com" -!]
+[!- set domain_no_trailing_slash = "neovim-menu.alanwsmith.com" -!]
 
 [!- set description -!]
-A new website that hopefully does something cool, but doesn't have a name yet. 
+a personal menu for performing various tasks in neovim
 [!- endset -!]
 
 [!- set favicon_root = "/favicons" -!]
@@ -62,9 +62,9 @@ https://[@ domain_no_trailing_slash @]/images/og-image.jpg
           <a href="https://www.alanwsmith.com/feeds/posts.xml">rss</a>
         </div>
         <hgroup class="large-top-margin">
-          <h1>A New Site</h1>
+          <h1>neovim-menu</h1>
           <div class="small-font accent-bottom-border">
-            With a subtitle
+            [@ description @]
           </div>
         </hgroup>
       </header>
